[project]
name = "py-leap"
version = "0.1a36"
description = ""
authors = [{ name = "Guillermo Rodriguez", email = "guillermo@telos.net" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "requests<2.32.0",
    "httpx>=0.28.1,<0.29",
    "msgspec>=0.19.0",
    "pyo3-antelope-rs",
    "pyo3-iceoryx2",
    "trio-websocket>=0.12.2",
    "pyarrow>=19.0.1",
    "websockets>=15.0.1",
    "tractor",
]

[dependency-groups]
docs = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0",
]
dev = [
    "pytest>=8.3.4,<9",
    "docker>=6.1.3,<7",
    "pytest-trio>=0.8.0,<0.9",
    "greenback>=1.2.1",
]
snaps = [
    "bs4>=0.0.2,<0.0.3",
    "tdqm>=0.0.1,<0.0.2",
    "zstandard>=0.21.0,<0.22",
]

[tool.uv]
default-groups = [
    "docs",
    "dev",
    "snaps",
]

[tool.uv.sources]
tractor = { git = "https://pikers.dev/goodboy/tractor.git", rev = "ce537bc0101338ff481ed45a473f61efbc2cde93" }

[tool.uv.sources.pyo3-antelope-rs]
# url = "https://github.com/openrepublic/pyo3-antelope-rs/releases/download/v0.3.1/pyo3_antelope_rs-0.3.1-cp39-abi3-manylinux_2_34_x86_64.whl"
# git = "https://github.com/openrepublic/pyo3-antelope-rs.git"
# rev = "8a0724b0504acdaf2af67e5e97e90a9411da26fa"
path = "../pyo3-antelope-rs"

[tool.uv.sources.pyo3-iceoryx2]
path = "../pyo3-iceoryx2"

[tool.hatch.build.targets.sdist]
include = ["src/leap"]

[tool.hatch.build.targets.wheel]
include = ["src/leap"]

[tool.hatch.build.targets.wheel.sources]
"src/leap" = "leap"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."pytest11"]
leap = "leap.fixtures"
